# openmp_benchmark

./: .gitignore  .gitmodules  README.md
openmp_benchmarks/: CMakeLists.txt  build.ps1  linux_build.sh  offload_processing_results.ipynb  processing_results.ipynb  run_offloading.sh  run_script.sh  validate.json
openmp_benchmarks/descriptors/: batchnorm.json  conv.json  ctfft.json  emptyloop.json  linear.json  matmul.json  primetest.json  quicksort.json  wave.json
openmp_benchmarks/include/: BatchNorm.hpp  BenchEngine.hpp  Benchmark.hpp  Convolution2D.hpp  CooleyTukeyFFT.hpp  EmptyForLoopBenchmark.hpp  Linear.hpp  Logger.hpp  MatrixMultiplication.hpp  PrimeTest.hpp  QuickSort.hpp  WaveEquation.hpp  common.hpp
openmp_benchmarks/offloading_descriptors/: batchnorm.json  conv.json  linear.json  matmul.json  wave.json
openmp_benchmarks/results/normal/gold_6130/clang_results/batchnorm/: out_1.csv  out_10.csv  out_11.csv  out_12.csv  out_13.csv  out_14.csv  out_15.csv  out_16.csv  out_17.csv  out_18.csv  out_19.csv  out_2.csv  out_20.csv  out_21.csv  out_22.csv  out_23.csv  out_24.csv  out_25.csv  out_26.csv  out_27.csv  out_28.csv  out_29.csv  out_3.csv  out_30.csv  out_31.csv  out_32.csv  out_33.csv  out_34.csv  out_35.csv  out_36.csv  out_37.csv  out_38.csv  out_39.csv  out_4.csv  out_40.csv  out_41.csv  out_42.csv  out_43.csv  out_44.csv  (+25 more)
openmp_benchmarks/src/: BatchNorm.cpp  BenchEngine.cpp  Convolution2D.cpp  CooleyTukeyFFT.cpp  EmptyForLoopBenchmark.cpp  Linear.cpp  MatrixMultiplication.cpp  OpenMPBenchmark.cpp  PrimeTest.cpp  QuickSort.cpp  WaveEquation.cpp
(+9332 files in other folders)
